--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "description": "",
   "main": "open-weekly.js",
+  "bin": "open-weekly.js",
   "scripts": {
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Maciej Barelkowski <maciej.barelkowski@camunda.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "open": "^8.0.8"
+  }
 }
